Bug 425140 - effect around indexed paths is triggered again when settings window is maximized
Summary: effect around indexed paths is triggered again when settings window is maximized
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-08 14:22 UTC by Patrick Silva
Modified: 2020-12-10 15:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments
screen recording (1.22 MB, video/webm)
2020-08-08 14:22 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-08-08 14:22:22 UTC
Created attachment 130726 [details]
screen recording

SUMMARY
Watch the attached screen recording please.


EXPECTED RESULT
do not trigger the effect around the indexed paths when settings window is maximized

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2
Comment 1 Nate Graham 2020-08-10 14:26:14 UTC
I don't know that we even need that effect in the first place, to be honest.
Comment 2 Nate Graham 2020-11-11 22:42:32 UTC
Will fix this as a part of my (WIP) work to re-do the config window, which needs https://invent.kde.org/multimedia/elisa/-/merge_requests/183 to be merged first.
Comment 3 Bug Janitor Service 2020-12-07 23:26:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/198
Comment 4 Nate Graham 2020-12-10 15:32:58 UTC
Git commit 4043561f2fffc7965c4fdc5f1d0908a39e6ded84 by Nate Graham.
Committed on 10/12/2020 at 15:32.
Pushed by ngraham into branch 'master'.

Redo configuration window

The configuration window is re-done in a modern style. The changes
include:
- Use Form Layout style
- Use standard style list delegates
- Use standard Kirigami Units for distances, sizes, and paddings
- Use an invokable function to remove paths rather than directly
  manipulating the model from inside the view
- Re-word some text for clarity and brevity
- Display warning for using filesystem crawling only when the option is
  selected
- Combine everything into a single file for simplicity
- Don't let the user remove the last music search path
- Re-order properties to conform to standard style
- Use QQC2 import name

These changes fix the following bugs:
Related: bug 418578
FIXED-IN: 21.04

Note that this bumps the frameworks dependency to 5.77 due to the use of
the new trailing property in Kirigami.BasicListItem.

M  +1    -1    CMakeLists.txt
M  +0    -2    src/CMakeLists.txt
M  +6    -0    src/localFileConfiguration/elisaconfigurationdialog.cpp
M  +3    -0    src/localFileConfiguration/elisaconfigurationdialog.h
M  +252  -50   src/qml/ElisaConfigurationDialog.qml
D  +0    -159  src/qml/FileScanningConfiguration.qml
D  +0    -153  src/qml/GeneralConfiguration.qml
M  +0    -2    src/resources.qrc

https://invent.kde.org/multimedia/elisa/commit/4043561f2fffc7965c4fdc5f1d0908a39e6ded84