Redo configuration window

The configuration window is re-done in a modern style. The changes
include:
- Use Form Layout style
- Use standard style list delegates
- Use standard Kirigami Units for distances, sizes, and paddings
- Use an invokable function to remove paths rather than directly
  manipulating the model from inside the view
- Re-word some text for clarity and brevity
- Display warning for using filesystem crawling only when the option is
  selected
- Combine everything into a single file for simplicity
- Don't let the user remove the last music search path
- Re-order properties to conform to standard style
- Use QQC2 import name

These changes fix the following bugs:
BUG: 425140
BUG: 418578
FIXED-IN: 21.04

Note that this bumps the frameworks dependency to 5.77 due to the use of
the new trailing property in Kirigami.BasicListItem.